<resources>
    <string name="app_name">ItinérairePlusPlus</string>
<!--    <string name="setting_user_profile_btn_view">View profile</string>-->
<!--    <string name="setting_user_profile_btn_edit">Edit profile</string>-->
<!--    <string name="setting_user_setting_btn_edit">Edit settings</string>-->
    <string name="title_activity_maps">Destination Courante</string>
    <string name="login_userName">Entrez votre nom</string>
    <string name="login_password">Entrez votre mot de passe</string>
    <string name="login_btn">Entrer</string>
    <string name="login_newUser">Nouvel Utilisateur ? S\'enregistrer ICI</string>
    <string name="btn_destinations">Destination</string>
    <string name="register_email">Entrez votre courriel</string>
    <string name="register_password">Entrez votre mot de passe</string>
    <string name="register_pswConfirmation">Entrez de nouveau votre mot de passe</string>
    <string name="register_btn">S\'enregistrer</string>
    <string name="register_oldUser">Déjà un utilisateur ? Entrer ICI</string>
    <string name="register_userName">Entrer le nom de l\'utilisateur</string>
    <string name="setting_profilBtn">Profile Utilisateur</string>
    <string name="setting_name">Nom</string>
    <string name="setting_address">Adresse</string>
    <string name="setting_editBtn">Modifier</string>
    <string name="setting_configBtn">Configuration</string>
    <string name="setting_vehiculeBtn">Véhicules</string>
    <string name="setting_energyBtn">Énergies</string>
    <string name="setting_activityBtn">Activités</string>
    <string name="destAdapter_name">Nom</string>
    <string name="destAdapter_tripTime">Temps du voyage</string>
    <string name="stepAdapter_nameStep">Nom de l\'étape</string>
    <string name="stepActivityAdapter_source">Activité :</string>
    <string name="dialog_captionBtn">Caption</string>
    <string name="dialog_name">Nom</string>
    <string name="dialog_cancelBtn">Annuler</string>
    <string name="dialog_confirmBtn">Confirmer</string>
    <string name="dialogStepDtls_captionBtn">Caption</string>
    <string name="dialogStepDtls_source">Départ :</string>
    <string name="dialogStepDtls_destination">Arrivée :</string>
    <string name="dialogStepDtls_estimation">Estimation :</string>
    <string name="dialogStepDtls_activity">Activité(s)</string>
    <string name="dialogEstimation_captionBtn">Caption</string>
    <string name="dialogEstimation_trips">Déplacements</string>
    <string name="dialogEstimation_trip">Routes :</string>
    <string name="dialogEstimation_stop">Arrêts :</string>
    <string name="dialogEstimation_total">Total :</string>
    <string name="dialogEstimation_km">Kilométrages</string>
    <string name="dialogEstimation_vehicle">Véhicule</string>
    <string name="dialogEstimation_costs">Coûts</string>
    <string name="dialogEstimation_cost">Coût</string>

    <string name="dialogEstimation_acknowledge">Sauvegarder</string>
    <string name="dialogEstimation_ok">OK</string>
    <string name="settingAddActivity_captionBtn">Caption</string>
    <string name="settingAddActivity_name">Nom</string>
    <string name="settingAddActivity_time">Temps</string>
    <string name="settingAddActivity_duration">Durée</string>
    <string name="settingAddActivity_cancelBtn">Annuler</string>
    <string name="settingAddActivity_addBtn">Sauvegarder</string>
    <string name="settingAddEnergy_captionBtn">Caption</string>
    <string name="settingAddEnergy_type">Type</string>
    <string name="settingAddEnergy_price">Prix</string>
    <string name="settingAddEnergy_unit">Unité</string>
    <string name="settingAddEnergy_cancelBtn">Annuler</string>
    <string name="settingAddEnergy_acknowledgeBtn">Sauvegarder</string>
    <string name="settingAddVehicule_captionBtn">Caption</string>
    <string name="settingAddVehicule_type">Type</string>
    <string name="settingAddVehicule_energy">Énergie</string>
    <string name="settingAddVehicule_distance">Distance</string>
    <string name="settingAddVehicule_mesure">Mesure</string>
    <string name="settingAddVehicule_capacity">Capacité</string>
    <string name="settingAddVehicule_unit">Unité</string>
    <string name="settingAddVehicule_cancelBtn">Annuler</string>
    <string name="settingAddVehicule_acknowledgeBtn">Sauvegarder</string>
    <string name="settingUser_captionBtn">Caption</string>
    <string name="settingUser_name">Nom</string>
    <string name="settingUser_address">Adresse</string>
    <string name="settingUser_city">Ville</string>
    <string name="settingUser_state">Province</string>
    <string name="settingUser_postalCode">Code Postal</string>
    <string name="settingUser_country">Pays</string>
    <string name="settingUser_cancelBtn">Annuler</string>
    <string name="settingUser_acknowledgeBtn">Sauvegarder</string>
    <string name="tab_1">Véhicules</string>
    <string name="tab_2">Activités</string>
    <string name="tab1Fragment_radio1">Véhicule Électrique</string>
    <string name="tab1Fragment_radio2">Véhicule à Essence</string>
    <string name="tab2Fragment_checkbox1">Manger</string>
    <string name="tab2Fragment_checkbox2">Essence</string>
    <string name="tab2Fragment_checkbox3">Recharge</string>
    <string name="tab2Fragment_checkbox4">Dormir</string>
    <string name="dialog_pickTime">Temps</string>
    <string name="dialog_pickDuration">Durée</string>
    <string name="addDestination_vehicleMsg">Veuillez choisir le type de véhicule\nque vous souhaitez utiliser</string>
    <string name="addDestination_activitiesMsg">Veuillez choisir une ou plusieures activités</string>
    <string name="main_welcomeMsg">Bienvenue Dans l\'Itinéraire Plus Plus</string>
    <string name="main_addDestinationBtn">Ajouter une\nnouvelle destination</string>
    <string name="main_listViewTitle">Vos destinations récentes</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_vos_destinations">Vos Destinations</string>
    <string name="menu_ajouter_une_destination">Ajouter une Destination</string>
    <string name="menu_quitter">Quitter</string>
    <string name="estimation_activites_name">Activités</string>
    <string name="estimation_activites_restaurants">Restaurants :</string>
    <string name="estimation_activity_hotels">Hotêls :</string>
    <string name="estimation_activity_energy">Stations Services :</string>
</resources>