<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/estimation_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/purple_500"
            android:padding="5dp"
            android:text="@string/dialogEstimation_captionBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogEstimation_trips"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estimation_deplacement"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/dialogEstimation_trip"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/estimation_deplacement_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estimation_arret"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/dialogEstimation_stop"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/estimation_arret_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estimation_total"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/dialogEstimation_total"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/estimation_total_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogEstimation_costs"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estimation_cout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/dialogEstimation_cost"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/estimation_cout_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dialogEstimation_acknowledge" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>