<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_setting_activity_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/purple_500"
            android:padding="5dp"
            android:text="@string/settingAddActivity_captionBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/settingAddActivity_name"/>
            <EditText
                android:id="@+id/setting_edit_activity_name"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:inputType="text"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Temps :"/>
            <EditText
                android:id="@+id/setting_edit_activity_time"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:textSize="15sp"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="end"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnAnnuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingAddActivity_cancelBtn"
                android:layout_marginEnd="8dp"/>
            <Button
                android:id="@+id/btnConfirmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingAddActivity_addBtn"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>