<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_step_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/purple_500"
            android:padding="5dp"
            android:text="@string/dialogStepDtls_captionBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_step_start"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingEnd="4dp"
                android:text="@string/dialogStepDtls_source" />

            <TextView
                android:id="@+id/detail_step_start_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_step_end"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingEnd="4dp"
                android:text="@string/dialogStepDtls_destination" />

            <TextView
                android:id="@+id/detail_step_end_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_step_trip_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingEnd="4dp"
                android:text="@string/dialogStepDtls_estimation" />

            <TextView
                android:id="@+id/detail_step_trip_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_step_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/dialogStepDtls_activity"
                android:textStyle="bold"
                android:textSize="16dp"/>

            <ListView
                android:id="@+id/detail_step_activity_value"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Ok"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>